<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">2604788743184222</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb2604788743184222</string>

    <!-- BOTTOM NAVIGATION VIEW-->
    <string name="bottom_view_map">Map</string>
    <string name="bottom_view_list">Restaurant List</string>
    <string name="bottom_view_mates">Workmates</string>
    <string name="title_activity_maps">Map</string>

    <!-- DRAWER MENU-->
    <string name="chosen_restaurant">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="need_permission_message">This application needs permission to run</string>
    <string name="search_view">Search Restaurant</string>
    <string name="no_lunch">You don\'t have select a place to lunch</string>

    <!-- CONTENT DESCRIPTION-->
    <string name="desc_img_recyclerview" translatable="false">Photo restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="expanded_image_notification">Image of your restaurant for lunch</string>
    <string name="app_icon">Icon of the application</string>

    <!-- SETTINGS XML-->
    <string name="switch_text">Enable/Disable notifications</string>
    <string name="update_button">Update Information</string>
    <string name="delete_button">Delete Account</string>
    <string name="toast_error_image">No image choose or image can\'t be pick</string>

    <!-- SETTINGS ALERT DIALOG-->
    <string name="title">Delete Account ?</string>
    <string name="message">Are you sure you want to delete your account and all your data</string>

    <!-- NOTIFICATION-->
    <string name="notification_title">Hey ! Don\'t forget to eat !</string>
    <string name="notification_content">you have select a place to eat today</string>
    <string name="notification_message_alone">You are eating at %s on %s</string>
    <string name="notification_message">You are eating at %s with %s on %s</string>
    <string name="notificationChannel" translatable="false">notificationChannel</string>
    <string name="name_channel" translatable="false">Go4Lunch channel</string>
    <string name="description_channel" translatable="false">Notification channel</string>

    <!-- BOTTOM SHEET-->
    <string name="log_in">I already have an account !</string>
    <string name="sign_in">i don\'t have an account yet !</string>

    <!-- SIGN IN -->
    <string name="mail">Your Mail</string>
    <string name="password">Your Password</string>
    <string name="username">Your Username</string>
    <string name="error_space">Please remove spaces</string>
    <string name="error_empty">You have to define a mail</string>
    <string name="error_format">Please respect the format of an email address</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_in_button">Sign In</string>
    <string name="cancel_button">Cancel</string>
    <string name="log_with_social_media">Log you with social media (preferable)</string>
    <string name="log_with_email">Log you with your email</string>
    <string name="log_with_email_button">Log you with an Email</string>
    <string name="no_name">Unnamed</string>
    <string name="valid_mail_password">please fill with a valid email address and password</string>

    <!-- RESTAURANT LIST -->
    <string name="closing_soon">Close soon</string>
    <string name="no_time">No Time available</string>
    <string name="open_24_7">Open 24/7</string>
    <string name="closed">Closed</string>
    <string name="open_until">Open until %s</string>

    <string name="notification_disable">Careful you have disable the notifications</string>
    <string name="no_friends">no soul treads these lands! </string>
    <string name="place_mates_eating">%s is eating at %s</string>
    <string name="mates_not_place">%s hasn\'t decided yet</string>
    <string name="not_restaurant">The place you searched is not a restaurant </string>
    <string name="no_website">This restaurant don\'t have a website</string>
    <string name="no_phone">This restaurant don\'t have a Phone Number</string>
    <string name="authentication_failed" translatable="false">Authentication Failed</string>

</resources>