<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity">

    <ImageButton
        android:id="@+id/profile_picture_imageButton"
        android:layout_width="150dp"
        android:layout_height="150dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:maxLength="30"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_imageButton" />

    <EditText
        android:id="@+id/mail_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:maxLength="30"
        android:textAllCaps="false"
        android:inputType="textEmailAddress"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"

        android:text="@string/switch_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_editText" />

    <Button
        android:id="@+id/update_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:text="@string/update_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_switch"
        app:layout_constraintVertical_bias="0.60"/>

    <Button
        android:id="@+id/delete_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:text="@string/delete_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>