<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.RestaurantDetailActivity">

    <ImageView
        android:id="@+id/imageViewPictureRestaurant"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/desc_img_recyclerview"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSelectedRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginEnd="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPictureRestaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPictureRestaurant" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="3"
        app:layout_constraintHorizontal_weight="9"
        app:layout_constraintVertical_weight="9"

        android:layout_marginStart="22dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPictureRestaurant"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="85dp"

        app:cardBackgroundColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPictureRestaurant">

        <TextView
            android:id="@+id/textViewNameRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="11dp"

            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewAddressRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"

            android:layout_marginTop="44dp"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/call"
        android:textColor="@color/orange"
        android:background="@color/fui_transparent"
        android:textSize="17sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="13dp"
        android:clickable="true"
        android:focusable="true"

        app:layout_constraintEnd_toStartOf="@+id/like_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingPrefix"
         />

    <Button
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@color/fui_transparent"
        android:clickable="true"
        android:drawablePadding="13dp"
        android:focusable="true"
        android:text="@string/like"
        android:textColor="@color/orange"
        android:textSize="17sp"
        android:textStyle="bold"
        app:drawableTint="@color/orange"
        app:drawableTopCompat="@drawable/ic_baseline_star_24"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/website"
        android:textColor="@color/orange"
        android:background="@color/fui_transparent"
        android:textSize="17sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_baseline_public_24"
        android:drawablePadding="13dp"
        android:clickable="true"
        android:focusable="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/like_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingPrefix" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_button">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_mates_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>